[gd_scene load_steps=15 format=2]

[ext_resource path="res://battle_backgound.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Btnattack.gd" type="Script" id=2]
[ext_resource path="res://Scripts/BtnMamon.gd" type="Script" id=3]
[ext_resource path="res://Scripts/BtnItem.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Btnrun.gd" type="Script" id=5]
[ext_resource path="res://tileset_characters.png" type="Texture" id=6]
[ext_resource path="res://Fonts/PixelGameFont.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Fonts/small_pixel.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/battle/mamon.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scripts/enemy_mamon.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 8
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 255, 40 ), Vector2( 257, 40 ), Vector2( 256, 40 ) ]
}

[node name="battle" type="Node2D"]

[node name="background" type="TextureRect" parent="."]
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="attack" type="Button" parent="."]
margin_left = 183.0
margin_top = 173.0
margin_right = 231.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( -156, -26 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Atk"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="run" type="Button" parent="."]
margin_left = 256.0
margin_top = 204.0
margin_right = 304.0
margin_bottom = 224.0
rect_pivot_offset = Vector2( -156, -26 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.854902, 0.878431, 0.917647, 1 )
text = "Run"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heal" type="Button" parent="."]
margin_left = 256.0
margin_top = 173.0
margin_right = 304.0
margin_bottom = 193.0
rect_pivot_offset = Vector2( -156, -26 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.854902, 0.878431, 0.917647, 1 )
text = "Heal"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="change" type="Button" parent="."]
margin_left = 183.0
margin_top = 204.0
margin_right = 231.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( -156, -26 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.854902, 0.878431, 0.917647, 1 )
text = "Mam"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="infoText" type="RichTextLabel" parent="."]
margin_left = 78.0
margin_top = 170.0
margin_right = 172.0
margin_bottom = 227.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.854902, 0.878431, 0.917647, 1 )
text = "Escolha uma ação!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="self_mamon" parent="." instance=ExtResource( 10 )]
script = null

[node name="enemy_mamon" type="Node2D" parent="."]
script = ExtResource( 11 )

[node name="sprite" type="Sprite" parent="enemy_mamon"]
position = Vector2( 256, 40 )
texture = ExtResource( 6 )
hframes = 2
vframes = 2
region_enabled = true
region_rect = Rect2( 64, 0, 64, 64 )

[node name="name" type="Label" parent="enemy_mamon"]
anchor_left = 0.387
anchor_top = 0.033
anchor_right = 0.584
anchor_bottom = 0.067
margin_left = 124.0
margin_top = 8.0
margin_right = 187.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
text = "Nome Exemplo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hp" type="Label" parent="enemy_mamon"]
anchor_left = 0.494
anchor_top = 0.112
anchor_right = 0.622
anchor_bottom = 0.15
margin_left = 162.0
margin_top = 28.0
margin_right = 199.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 3 )
text = "446/446"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim" type="AnimationPlayer" parent="enemy_mamon"]
anims/hit = SubResource( 4 )
